# objectio

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  docker-compose.cluster.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml
.github/: release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
console/: index.html  ops.html  package-lock.json  package.json  tenant.html  vite.config.ts
console/public/: site.webmanifest
console/src/: App.tsx  brand-tokens.css  index.css  main.tsx
console/src/api/: client.ts
console/src/components/: BreadcrumbPath.tsx  CapacityBar.tsx  Card.tsx  Drawer.tsx  ExpandableRow.tsx  GroupsPanel.tsx  Layout.tsx  PageHeader.tsx  PolicyEditor.tsx  StatusBadge.tsx  StatusDot.tsx  SummaryPanel.tsx  TableSecurityEditor.tsx  Tabs.tsx
console/src/lib/: license.ts
console/src/pages/: Balancing.tsx  BucketDetail.tsx  Buckets.tsx  Cluster.tsx  Dashboard.tsx  DeltaSharing.tsx  Drives.tsx  Encryption.tsx  IcebergCatalog.tsx  Identity.tsx  License.tsx  Login.tsx  Monitoring.tsx  MyAccount.tsx  Objects.tsx  Policies.tsx  PoolPlacement.tsx  Pools.tsx  Tenants.tsx  Topology.tsx  UnityCatalog.tsx  Users.tsx
crates/objectio-auth/: Cargo.toml
crates/objectio-auth/src/: chain.rs  error.rs  external_policy.rs  lib.rs  policy.rs  presign.rs  provider.rs  sigv2.rs  sigv4.rs  store.rs  sts.rs  user.rs
crates/objectio-auth/src/evaluators/: mod.rs  openfga.rs
crates/objectio-auth/src/providers/: builtin.rs  mod.rs  oidc.rs
crates/objectio-block/: Cargo.toml
crates/objectio-block/src/: cache.rs  chunk.rs  error.rs  journal.rs  lib.rs  metrics.rs  qos.rs  volume.rs
crates/objectio-client/: Cargo.toml
crates/objectio-client/src/: lib.rs  meta.rs  osd.rs
crates/objectio-common/: Cargo.toml
crates/objectio-common/src/: checksum.rs  config.rs  error.rs  lib.rs  types.rs
crates/objectio-delta-sharing/: Cargo.toml
crates/objectio-delta-sharing/src/: access.rs  catalog.rs  error.rs  handlers.rs  lib.rs  types.rs
crates/objectio-erasure/: Cargo.toml
crates/objectio-erasure/src/: codec.rs  lib.rs  shard.rs
crates/objectio-erasure/src/backend/: factory.rs  mod.rs  rust_simd.rs
crates/objectio-erasure/src/backend/isal/: backend.rs  mod.rs
crates/objectio-iceberg/: Cargo.toml
crates/objectio-iceberg/src/: access.rs  catalog.rs  error.rs  filters.rs  handlers.rs  lib.rs  metadata.rs  roles.rs  types.rs
crates/objectio-kms/: Cargo.toml
crates/objectio-kms/src/: lib.rs
crates/objectio-license/: Cargo.toml
crates/objectio-license/src/: lib.rs  pubkey.rs
crates/objectio-meta-store/: Cargo.toml
crates/objectio-meta-store/src/: bucket.rs  lib.rs  object.rs  raft.rs  raft_network.rs  raft_storage.rs  store.rs  tables.rs  types.rs
crates/objectio-placement/: Cargo.toml
crates/objectio-placement/src/: copyset.rs  crush.rs  crush2.rs  jump_hash.rs  lib.rs  policy.rs  topology.rs
crates/objectio-proto/: Cargo.toml  build.rs
crates/objectio-proto/proto/: block.proto  cluster.proto  metadata.proto  raft.proto  storage.proto
crates/objectio-proto/src/: lib.rs
crates/objectio-s3/: Cargo.toml
crates/objectio-s3/src/: auth.rs  error.rs  handlers.rs  lib.rs  metrics.rs  xml.rs
crates/objectio-s3/src/handlers/: bucket.rs  multipart.rs  object.rs
crates/objectio-storage/: Cargo.toml
crates/objectio-storage/src/: aligned_buf.rs  block.rs  cache.rs  disk.rs  io_backend.rs  layout.rs  lib.rs  raw_io.rs  repair.rs  smart.rs  wal.rs
crates/objectio-storage/src/metadata/: btree.rs  cache.rs  mod.rs  store.rs  types.rs  wal.rs
deploy/datacore/: docker-compose.yml  k3s-values.yaml
deploy/datacore/config/: osd1.toml  osd2.toml  osd3.toml  osd4.toml  osd5.toml
deploy/grafana/dashboards/: cluster-overview.json
deploy/kind/: kind-cluster.yaml  setup.sh  values.yaml
deploy/local-cluster/: docker-compose.monitoring.yml  docker-compose.yml
deploy/monitoring/: docker-compose.monitoring.yml
deploy/prod/: docker-compose.yml
deploy/prometheus/: prometheus.yml
deploy/single-node-7disk/: deploy.sh  docker-compose.yml  setup-disks.sh
docs/: DESIGN.md  FEATURES.md  README.md  TOPOLOGY-ROADMAP.md  getting-started.md
docs/api/: README.md  authentication.md  iceberg-api.md  s3-operations.md
docs/architecture/: README.md  block-storage.md  components.md  data-protection.md  deployment-options.md
docs/deployment/: README.md  configuration.md  docker.md  topologies.md
docs/operations/: README.md  failure-recovery.md  monitoring.md
docs/storage/: README.md  caching.md  disk-layout.md  erasure-coding.md
enterprise/: LICENSE  README.md
enterprise/crates/objectio-delta-sharing/: Cargo.toml
enterprise/crates/objectio-delta-sharing/src/: access.rs  catalog.rs  delta_log.rs  error.rs  handlers.rs  lib.rs  presigned_reader.rs  types.rs
enterprise/crates/objectio-iceberg/: Cargo.toml
enterprise/crates/objectio-iceberg/src/: access.rs  catalog.rs  error.rs  handlers.rs  lib.rs  metadata.rs  roles.rs  types.rs
examples/config/: README.md
examples/pyiceberg/: objectio_tables_example.py  requirements.txt
examples/unity-catalog/: databricks_sdk_test.py  demo_model_lifecycle.py  demo_volume_governed.py  requirements.txt  seed_ui_demo.py  test_iam_unity_bridge.py  unity_smoke_test.py
scripts/: cloud-init.yaml  setup-test-vm.sh  setup-vm.sh
specs/001-architecture-overview/: plan.md  spec.md  tasks.md
specs/002-s3-api-gateway/: plan.md  spec.md  tasks.md
specs/003-metadata-service/: plan.md  spec.md  tasks.md
specs/004-osd-storage-daemon/: plan.md  spec.md  tasks.md
specs/005-block-storage/: plan.md  spec.md  tasks.md
specs/006-iceberg-delta-sharing/: plan.md  spec.md  tasks.md
specs/007-console-react-ui/: plan.md  spec.md  tasks.md
specs/008-deployment-ops/: plan.md  spec.md  tasks.md
(+60 files in other folders)
