[package]
name = "objectio-client"
description = "Internal RPC client for ObjectIO services"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
objectio-common = { workspace = true }
objectio-proto = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
