[package]
name = "objectio-common"
description = "Common types and utilities for ObjectIO"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
uuid = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }
crc32c = { workspace = true }
xxhash-rust = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
