[package]
name = "objectio-kms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
aes.workspace = true
aes-gcm.workspace = true
async-trait.workspace = true
base64.workspace = true
ctr.workspace = true
rand.workspace = true
thiserror.workspace = true

[lints]
workspace = true
