[package]
name = "objectio-meta-store"
description = "Raft-based metadata storage for ObjectIO"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
objectio-common = { workspace = true }
objectio-placement = { workspace = true }
objectio-proto = { workspace = true }
tokio = { workspace = true }
openraft = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
