[package]
name = "objectio-proto"
description = "Protocol buffer definitions for ObjectIO"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
